feat: 添加向量搜索功能和相关测试